# IS2---Proyecto

./: .coverage  .env  .pre-commit-config.yaml  README.md  chat_history.json  coverage.xml  main.py  pyproject.toml  test_MongoDB.py
.github/workflows/: python-app.yml
app/: main.py  usecases.py
app/adapters/: chromadb_adapter.py  file_processor_adapter.py  mongodb_adapter.py  openAI_adapter.py
app/api/: UI.py  dependencies.py  routers.py
app/core/: models.py  ports.py
pythonProject/: main.py  pyproject.toml
tests/: locustfile.py  test_MongoDB.py  test_integration.py  test_usecases.py  test_usecases_flie_processor.py
