[tool.poetry]
name = "ejemplorag"
version = "0.1.0"
description = ""
authors = ["JNarvaez712 <narvaez.jonathan0712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "^1.43.0"
chromadb = "^0.5.5"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
