[tool.poetry]
name = "ejemplorag"
version = "0.1.0"
description = ""
authors = ["JNarvaez712 <narvaez.jonathan0712@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
openai = "0.28"
chromadb = "^0.5.5"
pytest = "^8.3.3"
pymongo = "^4.9.1"
pre-commit = "^4.0.1"
pytest-cov = "^6.0.0"
coverage = "^7.6.4"
pytest-mock = "^3.14.0"
flake8 = "^7.1.1"
black = "^24.10.0"
bandit = "^1.7.10"
mypy = "^1.13.0"
python-docx = "^1.1.2"
pypdf2 = "^3.0.1"


[tool.poetry.group.dev.dependencies]
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
